Adding basic HTML code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,142 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
 
-<h1>This is jitendra kumar</h1>
-<p>Work in progress</p>
+<head>
+
+  <title>Jitendra's Profile</title>
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="Jitendra">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="css/tooplate-jitendra-resume-style.css">
+</head>
+
+<body data-spy="scroll" data-target="#navbarNav" data-offset="50">
+
+  <!-- MENU BAR -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+
+      <a class="navbar-brand" href="#">Jitendra Kumar - SDET</a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a href="#intro" class="nav-link smoothScroll">Introduction</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#about" class="nav-link smoothScroll">About Me</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#contact" class="nav-link smoothScroll">Contact</a>
+          </li>
+        </ul>
+
+        <div class="mt-lg-0 mt-3 mb-4 mb-lg-0">
+          <a href="https://1drv.ms/b/s!ArvaRqC1XGf7h4hN5Dp56B6pu6jmlw?e=RYgxDA" class="custom-btn btn" download>Download
+            Resume</a>
+        </div>
+      </div>
+
+    </div>
+  </nav>
+
+
+  <!-- HERO -->
+  <section class="hero d-flex flex-column justify-content-center align-items-center" id="intro">
+
+    <div class="container">
+      <div class="row">
+
+        <div class="mx-auto col-lg-5 col-md-5 col-10">
+          <img src="images/jitendra.png" class="img-fluid" alt="Jitendra Kumar">
+        </div>
+
+        <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
+          <div class="hero-text">
+            <h1 class="hero-title">👋 Say Hi !!</h1>
+            <a href="#" class="email-link">jitendrakumarr@outlook.in</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+  <section class="about section-padding" id="about">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-6 col-md-6 col-12">
+          <h3 class="mb-4">About Me</h3>
+          <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
+            <li><strong>Full Name :</strong> Jitendra Kumar </li>
+            <li><strong>Date of Birth:</strong> 22 August, 1991</li>
+          </ul>
+          <p> Some info regarding Jitendra <a rel="nofollow" href="https://www.tooplate.com" target="_parent"></p>
+          <p>Will add some more info. </p>
+        </div>
+
+        <div class="col-lg-5 mx-auto col-md-6 col-12">
+          <img src="images/true-agency.jpg" class="about-image img-fluid" alt="Ben's Resume HTML Template">
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+  <section class="contact section-padding pt-0" id="contact">
+    <div class="container">
+      <div class="row">
+
+        <div class="mx-auto col-lg-4 col-md-6 col-12">
+          <h3 class="my-4 pt-4 pt-lg-0" left-align>Say hi to me...</h3>
+          <p>
+            <a class="mb-1" href="#">
+              jitendrakumarr@outlook.in
+              <i class="fas fa-arrow-right custom-icon"></i>
+            </a>
+          </p>
+
+          <ul class="social-links mt-2">
+            <li><a href="https://www.facebook.com/jkthakurr/" rel="noopener" class="fab fa-facebook"></a></li>
+            <li><a href="https://twitter.com/_jitendrakumarr" rel="noopener" class="fab fa-twitter"></a></li>
+            <li><a href="https://www.instagram.com/_jitendrakumarr/" rel="noopener" class="fab fa-instagram"></a></li>
+            <li><a href="https://www.linkedin.com/in/jitendrakumarr/" rel="noopener" class="fab fa-linkedin"></a></li>
+            <li><a href="https://www.youtube.com/c/JitendraKumarjks" rel="noopener" class="fab fa-youtube"></a></li>
+          </ul>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- SCRIPTS -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/smoothscroll.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/custom.js"></script>
 
 </body>
+
 </html>
